<resources>
    <string name="app_name">Novel Reader</string>
    <string name="name">Name</string>
    <string name="author">Author</string>
    <string name="description">Description</string>
    <string name="m_t">Mô tả</string>
    <string name="chaptername">ChapterName</string>
    <string name="danh_s_ch_ch_ng">Danh sách chương</string>
    <string name="server_1">Server 1</string>
    <string name="server_2">Server 2</string>
    <string name="theme">Theme</string>
    <string name="fonts">Fonts</string>
    <string name="content">Content</string>
    <string name="title_dynamicfeature">Novel Source</string>
    <string name="settings">Settings</string>
    <string name="font">Font</string>
    <string name="text_size">Text Size</string>
    <string name="chapters_list">Chapters List</string>
    <string name="detail">Detail</string>
    <string name="export">Export</string>
    <string name="server">Server</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from_chapter">From Chapter</string>
    <string name="to_chapter">To Chapter</string>
    <string name="file_format">File Format</string>
    <string name="servers">Servers</string>
    <string name="plugin">Plugin</string>

    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="novelreader_download">NovelReader Download</string>
</resources>