<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fillViewport="true"
    android:padding="10dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/detailImage"
                android:layout_width="200dp"
                android:layout_height="320dp"
                android:scaleType="centerCrop"
                android:src="@color/gray" />

            <TextView
                android:id="@+id/detailName"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/detailImage"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailAuthor"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailName"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@id/detailImage"
                android:text="@string/author"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progressBarDetail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminate="true"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/m_t"
            android:textAllCaps="true"
            android:textColor="@color/white_smoke"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detailDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="@color/white_smoke"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/danh_s_ch_ch_ng"
            android:textAllCaps="true"
            android:textColor="@color/white_smoke"
            android:textSize="26sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chapterListRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none" />

    </LinearLayout>

</ScrollView>